--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "homepage": "http://reservo.co.ke/",
+  "homepage": "https://reservo.co.ke/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
