--- a/api/vercel.json
+++ b/api/vercel.json
@@ -25,8 +25,8 @@
     "DATABASE_URL": "your_database_url",
     "CLIENT_URL": "http://reservo.co.ke",
     "ADMIN_URL": "http://administrator.reservo.co.ke",
-    "SERVER_URL": "ep-shy-mouse-870414-pooler.us-east-1.postgres.vercel-storage.com",
-    "SERVER_PORT": "8000",
+    "SERVER_URL": "https://reservo-api.vercel.app/",
+    "SERVER_PORT": "80",
     "TOKEN_SECRET": "secret",
     "TOKEN_EXPIRES_IN": "24h",
     "EMAIL_HOST": "smtp.mailtrap.io",
