--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/server/*.js",
+      "src": "./index.ts",
       "use": "@vercel/node"
     }
   ],
