--- a/api/vercel.json
+++ b/api/vercel.json
@@ -7,9 +7,8 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/server/$1" },
-    { "src": "/admin/(.*)", "dest": "admin/$1" },
-    { "src": "/(.*)", "dest": "client/$1" }
+    { "src": "/(./routes/*)", 
+    "dest": "/" }
   ],
   "env": {
     "CLIENT_URL": "https://reservo.netlify.app/",
