--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.ts",
+      "src": "server/index.js",
       "use": "@vercel/node"
     }
   ],
