few more chnages to the files

--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.js",
+      "src": "./index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/.*",
+      "src": "/dist/.*",
       "dest": "server/index.js"
     }
   ]
