--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -14,6 +14,6 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["*.ts", "**/*.ts"],
+  "include": ["*.ts", "**/*.ts", "/api/*.ts"],
   "exclude": ["node_modules"]
 }
